FullQa New/src/objects/Excise_Division_Contract__c.object
<CustomObject>
    <description>Used to track Excise business unit specific product contracts</description>
    <fields>
        <fullName>Account__c</fullName>
        <label>Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Excise Division Contracts</relationshipLabel>
        <relationshipName>Excise_Division_Contracts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Amendment_Date__c</fullName>
        <label>Amendment Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Annual_Product_Invoice_Date__c</fullName>
        <label>Annual Product Invoice Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Annual_Sub_Maint_Fee__c</fullName>
        <label>Annual Sub/Maint Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Back_Offic_eSystem__c</fullName>
        <label>Back Office System</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Billing_Frequency_Notes__c</fullName>
        <label>Billing Frequency Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Billing_Frequency__c</fullName>
        <label>Billing Frequency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Monthly</fullName>
                </value>
                <value>
                    <fullName>Quarterly</fullName>
                </value>
                <value>
                    <fullName>Annually</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Contract_Is_Active__c</fullName>
        <formula>IF(OR( ISBLANK(Product_License_End_Date__c ),Product_License_End_Date__c&gt;Today()),TRUE,FALSE)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Contract Is Active</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Contract_Type__c</fullName>
        <label>Contract Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>SSA</fullName>
                </value>
                <value>
                    <fullName>SSMA</fullName>
                </value>
                <value>
                    <fullName>Filing Contract</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Deployed__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Deployed</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Development_Fee__c</fullName>
        <label>Development Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Effective_Date__c</fullName>
        <label>Effective Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Escalation_Percent__c</fullName>
        <label>Escalation Percent</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Percent</type>
    </fields>
    <fields>
        <fullName>Escalation__c</fullName>
        <label>Escalation</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Fee_Commencement_Date_Determined_By__c</fullName>
        <label>Fee Commencement Date Determined By</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>PAF</fullName>
                </value>
                <value>
                    <fullName>RMA</fullName>
                </value>
                <value>
                    <fullName>Effective Date</fullName>
                </value>
                <value>
                    <fullName>Signature Date</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Fee_Commencement_Date_Notes__c</fullName>
        <label>Fee Commencement Date Notes</label>
        <length>1000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Fee_Commencement_Date__c</fullName>
        <label>Fee Commencement Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>GP_Id__c</fullName>
        <label>GP Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Implementation__c</fullName>
        <label>Implementation Fee (Hourly)</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Jurisdictions__c</fullName>
        <label>Jurisdictions</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Product_Name__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>AL</fullName>
                </value>
                <value>
                    <fullName>AK</fullName>
                </value>
                <value>
                    <fullName>AZ</fullName>
                </value>
                <value>
                    <fullName>AR</fullName>
                </value>
                <value>
                    <fullName>CA</fullName>
                </value>
                <value>
                    <fullName>CO</fullName>
                </value>
                <value>
                    <fullName>CT</fullName>
                </value>
                <value>
                    <fullName>DE</fullName>
                </value>
                <value>
                    <fullName>FL</fullName>
                </value>
                <value>
                    <fullName>GA</fullName>
                </value>
                <value>
                    <fullName>HI</fullName>
                </value>
                <value>
                    <fullName>ID</fullName>
                </value>
                <value>
                    <fullName>IL</fullName>
                </value>
                <value>
                    <fullName>IN</fullName>
                </value>
                <value>
                    <fullName>IA</fullName>
                </value>
                <value>
                    <fullName>KS</fullName>
                </value>
                <value>
                    <fullName>KY</fullName>
                </value>
                <value>
                    <fullName>LA</fullName>
                </value>
                <value>
                    <fullName>ME</fullName>
                </value>
                <value>
                    <fullName>MD</fullName>
                </value>
                <value>
                    <fullName>MA</fullName>
                </value>
                <value>
                    <fullName>MI</fullName>
                </value>
                <value>
                    <fullName>MN</fullName>
                </value>
                <value>
                    <fullName>MS</fullName>
                </value>
                <value>
                    <fullName>MO</fullName>
                </value>
                <value>
                    <fullName>MT</fullName>
                </value>
                <value>
                    <fullName>NE</fullName>
                </value>
                <value>
                    <fullName>NV</fullName>
                </value>
                <value>
                    <fullName>NH</fullName>
                </value>
                <value>
                    <fullName>NJ</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Link_to_Contract__c</fullName>
        <label>Link to Contract</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>Maintenance_Fee__c</fullName>
        <label>Maintenance Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>On_Premise_Contract__c</fullName>
        <defaultValue>false</defaultValue>
        <label>On Premise Contract</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Parter_Id__c</fullName>
        <label>Parter Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_License_End_Date__c</fullName>
        <label>Product License End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Product_License_Fee__c</fullName>
        <label>Product License Fee</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Product_Name__c</fullName>
        <label>Product Name</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Returns Excise</fullName>
                </value>
                <value>
                    <fullName>AvaTax Excise</fullName>
                </value>
                <value>
                    <fullName>Government</fullName>
                </value>
                <value>
                    <fullName>Fax Filer</fullName>
                </value>
                <value>
                    <fullName>Web Filer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Product_Version__c</fullName>
        <label>Product Version</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Product_Name__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>1.0</fullName>
                </value>
                <value>
                    <fullName>1.5</fullName>
                </value>
                <value>
                    <fullName>4.4</fullName>
                </value>
                <value>
                    <fullName>5.x</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Returns_By_Code__c</fullName>
        <inlineHelpText>Please separate each unique Return code with a semicolon.</inlineHelpText>
        <label>Return(s) - By Code</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Returns__c</fullName>
        <label>Returns</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Service_End_Date__c</fullName>
        <label>Service End Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Service_Start_Date__c</fullName>
        <label>Service Start Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Signature_Date__c</fullName>
        <label>Signature Date</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Tax_Payer_Type__c</fullName>
        <label>Tax Payer Type</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Term_Years__c</fullName>
        <label>Term (Years)</label>
        <precision>2</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Excise Division Contract</label>
    <nameField>
        <label>Excise Division Contract Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Excise Division Contracts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
    <validationRules>
        <fullName>No_Jurisdictions_for_Returns_5_x</fullName>
        <active>false</active>
        <errorConditionFormula>AND( ISPICKVAL(Product_Name__c , &quot;Returns Excise&quot;), ISPICKVAL(Product_Version__c,&quot;5.x&quot;), NOT(ISBLANK( Jurisdictions__c )))</errorConditionFormula>
        <errorMessage>Returns Excise version 5.x cannot have Jurisdictions.  Please remove the Jurisdictions or update the Product Version.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Billing_Frequency_requires_Note</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL(Billing_Frequency__c ,&quot;Other&quot;),ISBLANK( Billing_Frequency_Notes__c ))</errorConditionFormula>
        <errorMessage>You must enter a Billing Frequency Note if Billing Frequency is set as Other</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>Other_Fee_Commencement_requires_Note</fullName>
        <active>true</active>
        <errorConditionFormula>AND(ISPICKVAL( Fee_Commencement_Date_Determined_By__c ,&quot;Other&quot;),ISBLANK( Fee_Commencement_Date_Notes__c ))</errorConditionFormula>
        <errorMessage>You must enter a Fee Commencement Date Note if the &apos;Fee Commencement Date Determined By&apos; is set to Other</errorMessage>
    </validationRules>
</CustomObject>